Overdue commit: metaData + PR

--- a/PR/workingBrain.bib
+++ b/PR/workingBrain.bib
@@ -3220,3 +3220,18 @@ title = {{Overtime Survey 2018 - how much overtime does the UK work?}},
 url = {https://www.totallymoney.com/overtime-survey/},
 urldate = {2020-06-18}
 }
+
+@article{Sudlow2015,
+author = {Sudlow, Cathie and Gallacher, John and Allen, Naomi and Beral, Valerie and Burton, Paul and Danesh, John and Downey, Paul and Elliott, Paul and Green, Jane and Landray, Martin and Liu, Bette and Matthews, Paul and Ong, Giok and Pell, Jill and Silman, Alan and Young, Alan and Sprosen, Tim and Peakman, Tim and Collins, Rory},
+doi = {10.1371/journal.pmed.1001779},
+file = {:Users/munchausend/GoogleDrive/Mendeley/Lib/Sudlow et al. - 2015 - UK Biobank An Open Access Resource for Identifying the Causes of a Wide Range of Complex Diseases of Middle and O.pdf:pdf},
+issn = {15491676},
+journal = {PLoS Medicine},
+month = {mar},
+number = {3},
+pmid = {25826379},
+publisher = {Public Library of Science},
+title = {{UK Biobank: An Open Access Resource for Identifying the Causes of a Wide Range of Complex Diseases of Middle and Old Age}},
+volume = {12},
+year = {2015}
+}
