--- a/PR/workingBrain_PR_Main.tex
+++ b/PR/workingBrain_PR_Main.tex
@@ -4,7 +4,7 @@
 %
 \documentclass[
   english,
-  man]{apa6}
+  man,draftall]{apa6}
 \usepackage{lmodern}
 \usepackage{amssymb,amsmath}
 \usepackage{ifxetex,ifluatex}
@@ -159,8 +159,7 @@ Two or three sentences to provide a \textbf{broader perspective}, readily compre
 \begin{document}
 \maketitle
 
-\hypertarget{study-information}{%
-\section{Study information}\label{study-information}}
+\newpage
 
 \hypertarget{background}{%
 \subsection{Background}\label{background}}
@@ -200,18 +199,79 @@ Progress against these objectives will help develop a holistic insight into why 
 \hypertarget{rationale}{%
 \subsection{Rationale}\label{rationale}}
 
-Until recently the impact of working patterns on our neurophysiology has been overlooked, therefore it is difficult to formulate an investigative plan that directly builds on prior work. However, we have identified inadequate sleep as the principal means through which the influence of occupational factors on wellbeing is likely to manifest. First, relative to all other activities, work is the primary waking activity exchanged for sleep.\textsuperscript{{[}10{]}} Second, it is becoming increasingly common for workers to accumulate sleep debt throughout the working week and attempt to catch-up on the weekend, a countermeasure that has been shown to be ineffective in combating the deleterious effects of weekday sleep debt.\textsuperscript{{[}11--14{]}} Finally, working longer hours is associated with significantly reduced sleep duration and quality.\textsuperscript{{[}15{]}} Therefore, we will use the known neuronal and physiological mechanisms of sleep, and in particular sleep restriction, to help guide the incipient stage of our investigation.
+Until recently the impact of working patterns on our neurophysiology has been overlooked, therefore our investigative plan does not build directly and comprehensively on prior work. However, we have identified inadequate sleep as one principal means through which the influence of occupational factors on wellbeing is likely to manifest. First, relative to all other activities, work is the primary waking activity exchanged for sleep.\textsuperscript{{[}10{]}} Second, it is becoming increasingly common for workers to accumulate sleep debt throughout the working week and attempt to catch-up on the weekend, a countermeasure that has been shown to be ineffective in combating the deleterious effects of weekday sleep debt.\textsuperscript{{[}11--14{]}} Finally, working longer hours is associated with significantly reduced sleep duration and quality.\textsuperscript{{[}15{]}} Therefore, we will use the known neuronal and physiological mechanisms of sleep, and in particular sleep restriction, to help guide the incipient stage of our investigation.
 
-A multitude of bodily systems react to and interact with sleep-loss, a key set being the body's inflammatory response, and in particular increased expression of proinflammatory cytokines. Sleep restriction studies consistently found increased levels of interleukin-6\textsuperscript{{[}16{]}} in response to restricted sleep,\textsuperscript{{[}13{]}} an effect that is resilient to recovery sleep.\textsuperscript{{[}12{]}} One mechanism in which this altered inflammatory response affects cognitive and affective processing is via the interoceptive system.\textsuperscript{{[}17{]}} Afferent signals from peripheral nerves that embed visceral organs communicate to the brain what is happening physiologically in the body, including sensing inflammation. Interoception interacts with many other cognitive processes, such that our bodily feelings determine the way we behave.\textsuperscript{{[}18,19{]}} Altogether, this suggests that inflammation, via interoception, can drive how we feel and ultimately how we act.
+A multitude of bodily systems react to and interact with sleep-loss, a key set being the body's inflammatory response, and in particular increased expression of proinflammatory cytokines. Sleep restriction studies have consistently found increased levels of interleukin-6\textsuperscript{{[}16{]}} in response to restricted sleep,\textsuperscript{{[}13{]}} an effect that is resilient to recovery sleep.\textsuperscript{{[}12{]}} One mechanism by which this altered inflammatory response affects cognitive and affective processing is via the interoceptive system.\textsuperscript{{[}17{]}} Afferent signals from peripheral nerves that embed visceral organs communicate to the brain what is happening physiologically in the body, including sensing inflammation. Interoception interacts with many other cognitive processes, such that our bodily feelings determine the way we behave.\textsuperscript{{[}18,19{]}} Altogether, this suggests that inflammation, via interoception, can drive how we feel and ultimately how we act.
 
-Neurally, the most consistent findings associated with inadequate sleep are: (i) amygdala hyper-reactivity to aversive stimuli;\textsuperscript{{[}20,21{]}} (ii) disconnect between frontal regions and the amygdala, as well as the basal ganglia {[}\textsuperscript{{[}20,22--24{]}}; (iii) altered structure and function in the fronto-parietal network.\textsuperscript{{[}25,26{]}} Furthermore, given its pivotal role in both interoception and the salience-detection network, the insular cortex is likely to be a key mediator of the neurophysiological changes that result from chronic sleep restriction.\textsuperscript{{[}17--19,27{]}} However, very few studies directly investigate interactions between work patterns, inadequate sleep, and physiology, with none of them further assessing neurobiological changes in the same context. This projects will address the resulting gaps in the literature using a combination of population and cognitive neuroscience, epidemiology and immunological methods.
+Neurally, the most consistent findings associated with inadequate sleep are: (i) amygdala hyper-reactivity to aversive stimuli;\textsuperscript{{[}20,21{]}} (ii) disconnect between frontal regions and the amygdala, as well as the basal ganglia;\textsuperscript{{[}20,22--24{]}} (iii) altered structure and function in the fronto-parietal network.\textsuperscript{{[}25,26{]}} Furthermore, given its pivotal role in both interoception and the salience-detection network, the insular cortex is likely to be a key mediator of the neurophysiological changes that result from chronic sleep restriction.\textsuperscript{{[}17--19,27{]}} However, very few studies directly investigate interactions between work patterns, inadequate sleep, and physiology, with even fewer further assessing neurobiological changes in the same context.
+
+This project will address the resulting gaps in the literature using a combination of population neuroscience and epidemiological methods. We will begin by identifying neural markers of occupational wellbeing in the UK Biobank cohort: a population-based prospective study of \textasciitilde500,000 individuals, a subset of which (\textasciitilde40,000 as of 2020) completed an imaging follow-up, including both task\textsuperscript{{[}28{]}} and resting-state functional Magnetic Resonance Imaging (fMRI).\textsuperscript{{[}29{]}} Following approval by the UK Biobank Access Committee (Project ref. no.: 62188), brain imaging data (i.e.~task and resting functional brain MRI data) will be obtained for 35,501 participants, together with blood biochemistry assay results relevant to inflammation (i.e.~C-reactive protein) and a curated selection of sociodemographic, lifestyle and health-related information collected through questionnaires, verbal interviews and census data (e.g.~Townsend Deprivation Scores). The complete list of data fields requested can be found at \url{http://tiny.cc/UKBBMetaData_62188} (please note, ``Participants'' attribute refers to total participants in the cohort with information in the selected ``Field'', not the number of participants in the dataset linked to the current project). Prior to acessing the imaging data and results of the biochemistry assays, we will explore trends in the non-imaging/-physiological data. This will allow us to generate precise confirmatory hypotheses and specify predictions with regards to effects of occupational factors on imaging and physiological features, while taking into account complex contextual information. All analysis workflows, together with time-stamped logs detailing data access events will be linked to a series of future pre-registration plans.
+
+\newpage
 
 \hypertarget{hypotheses-and-predictions}{%
 \subsection{Hypotheses and predictions}\label{hypotheses-and-predictions}}
 
-\begingroup
-\setlength{\parindent}{-0.5in}
-\setlength{\leftskip}{0.5in}
+\textbf{\emph{H: Working patterns will be associated with specific neural markers.}} Based on findings in the sleep literature,\textsuperscript{{[}20--26,30--34{]}} we predict that:
+
+\begin{itemize}
+\item
+  Working longer hours will be associated with amygdala hyper-reactivity in response to emotional faces in the task fMRI*.
+\item
+  Working longer hours will be associated with reduced functional connectivity between the prefrontal cortex and the amygdala in task and resting-state fMRI, an effect which may be mediated by the insular cortex*.
+\item
+  Working longer hours will be associated with reduced functional connectivity within the salience-detection network, executive control, fronto-parietal, and default mode (DMN) networks in resting-state fMRI*.
+\item
+  Working longer hours will be associated with attenuated anticorrelation between task-negative (i.e.~DMN) and task-positive regions (i.e.~executive control, fronto-parietal, and salience-detection networks) in resting-state fMRI*.
+\end{itemize}
+
+\hspace{1cm}
+
+\textbf{\emph{H: Occupational factors will affect physiological immune function, in part, through altering sleep patterns.}} Given the known neurophysiological consequences of sleep restriction,\textsuperscript{{[}12,13,35{]}} and the effect of working patterns on sleep duration and quality,\textsuperscript{{[}10,11,15{]}} I predict that:
+
+\begin{itemize}
+\tightlist
+\item
+  Working longer hours will be associated with higher concentrations of CRP in the UK Biobank data*.
+\end{itemize}
+
+\hspace{1cm}
+
+\textbf{\emph{H: Work patterns will impact cognitive function and workplace performance.}} Based on work time reduction interventions,\textsuperscript{{[}8,36{]}} I predict that:
+
+\begin{itemize}
+\tightlist
+\item
+  Working longer hours and other time-consuming occupational factors (such as commuting) will negatively correlate with cognitive measures in the UK Biobank*.
+\end{itemize}
+
+* - after controlling for confounds.
+
+\hspace{1cm}
+
+\hypertarget{multifactorial-analysis-strategy}{%
+\subsection{Multifactorial analysis strategy}\label{multifactorial-analysis-strategy}}
+
+In order to determine how particular work patterns are associated with neural markers, immune function, and cognition, we need to first understand how numerous non-imaging/-physiological variables inter-relate in our Biobank dataset. This includes employment, sociodemographic, lifestyle, and health-related information (see \url{http:///tiny.cc/UKBBMetaData_62188} for a complete list).
+
+It is plausible that, for example, number of hours worked (`\emph{length of working week}') covarys in multiple, likely nonlinear, ways, with other employment variables (such as commute time, `\emph{distance between home and workplace}' \& `\emph{frequency of travelling}'), and with numerous variables from other categories. This means that if we wish to test for a specific effect between hours worked and neural function, for example, it may be challenging to conclude that a neural characteristic is attributable to hours worked, without accounting in some manner for these related variables. Even in the imaging data alone, it is clear that numerous quality-related metrics such as head motion, acquisition date and time, and scanner configuration act as potential confounders \textbf{???}.
+
+Therefore, prior to analysing the imaging and physiological data, we will undertake a comprehensive investigation of how employment variables (Biobank field XXX) relate to sociodemographic, lifestyle, and health-related information, in our dataset of n=35,501 individuals. To do so, we plan to use multivariate analysis techniques, incorporating machine learning methods, potentially applying a Canonical Correlational Analysis (CCA) approach.
+
+A complete and full picture of these relationships is, although very much worthy of scientific merit, not our primary and only goal, and also a lengthier and more detailed process than is within our present remit. We aim to characterise sufficiently the strongest inter-relations of employment variables with sociodemographic, lifestyle, and health-related information, and the nature of their association (e.g.~linear, U-shape function). This will be a standalone piece of work, but also form the preliminary stage to the investigation of brain, body and behavioural markers of occupational wellbeing, to which the above stated hypotheses relate. For example, we may use variables that show a strong, linear relation to number of hours worked as covariates in mass univariate General Linear Models when analysing the Hariri task fMRI. Other ways in which we utilise the picture of employment and other non-imaging/-physiology variables in our analyses of the imaging and physiology data will evolve as we proceed through the project.
+
+\hspace{1cm}
+
+\hypertarget{multistage-preregistration-plan}{%
+\subsection{Multistage preregistration plan}\label{multistage-preregistration-plan}}
+
+We intend to successively update our preregistration documentation as we proceed through each analysis step in this project. This document (dated XXX) forms the first document in this series. As we complete data analysis stages, we will be able to prescribe increasingly specific hypotheses, and refine our original broad imaging and physiological analysis approaches set out in earlier preregistration documentation, to increasingly more precise plans. This will include an evolution of expected statistical approaches as the multifactorial complexities of our dataset reveal themselves in relation to our specific questions about brain, body and behavioural markers of occupational wellbeing. For example, we anticipate the possiblity of applying a Canonical Correlational Analysis (CCA) approach, but as of yet do not have specific applications or software to preregister.
+
+We will seek to timestamp our data logs and analysis records, and provide updated pregregistration documents in a public repository, such that the evolutionary timeline is indicative of a commitment to preregistration principles, (i.e., to guard against `peeking' \textless lift phrase(s) from open science publication\textgreater), while taking account of the multi-stage and complex nature of this project.
+
+\newpage
+
+\newpage
 
 \hypertarget{refs}{}
 \begin{cslreferences}
@@ -295,28 +355,33 @@ Neurally, the most consistent findings associated with inadequate sleep are: (i)
 
 \leavevmode\hypertarget{ref-Ma2015}{}%
 27. Ma, N., Dinges, D. F., Basner, M., \& Rao, H. (2015). How Acute Total Sleep Loss Affects the Attending Brain: A Meta-Analysis of Neuroimaging Studies. \emph{Sleep}, \emph{38}(2), 233--240. \url{http://dx.doi.org/10.5665/sleep.4404}
+
+\leavevmode\hypertarget{ref-Hariri2002a}{}%
+28. Hariri, A. R., Tessitore, A., Mattay, V. S., Fera, F., \& Weinberger, D. R. (2002). The amygdala response to emotional stimuli: A comparison of faces and scenes. \emph{NeuroImage}, \emph{17}(1), 317--323. \url{http://dx.doi.org/10.1006/nimg.2002.1179}
+
+\leavevmode\hypertarget{ref-Sudlow2015}{}%
+29. Sudlow, C., Gallacher, J., Allen, N., Beral, V., Burton, P., Danesh, J., \ldots{} Collins, R. (2015). UK Biobank: An Open Access Resource for Identifying the Causes of a Wide Range of Complex Diseases of Middle and Old Age. \emph{PLoS Medicine}, \emph{12}(3). \url{http://dx.doi.org/10.1371/journal.pmed.1001779}
+
+\leavevmode\hypertarget{ref-Yeo2015}{}%
+30. Yeo, B. T., Tandi, J., \& Chee, M. W. L. (2015). Functional connectivity during rested wakefulness predicts vulnerability to sleep deprivation. \emph{NeuroImage}, \emph{111}, 147--158. \url{http://dx.doi.org/10.1016/j.neuroimage.2015.02.018}
+
+\leavevmode\hypertarget{ref-DeHavas2012}{}%
+31. De Havas, J. A., Parimal, S., Soon, C. S., \& Chee, M. W. L. (2012). Sleep deprivation reduces default mode network connectivity and anti-correlation during rest and task performance. \emph{NeuroImage}, \emph{59}(2), 1745--1751. \url{http://dx.doi.org/10.1016/j.neuroimage.2011.08.026}
+
+\leavevmode\hypertarget{ref-Shao2014}{}%
+32. Shao, Y., Lei, Y., Wang, L., Zhai, T., Jin, X., Ni, W., \ldots{} Yang, Z. (2014). Altered Resting-State Amygdala Functional Connectivity after 36 Hours of Total Sleep Deprivation. \emph{PLoS ONE}, \emph{9}(11), e112222. \url{http://dx.doi.org/10.1371/journal.pone.0112222}
+
+\leavevmode\hypertarget{ref-Lei2015}{}%
+33. Lei, Y., Shao, Y., Wang, L., Ye, E., Jin, X., Zou, F., \ldots{} Yang, Z. (2015). Altered superficial amygdala-cortical functional link in resting state after 36 hours of total sleep deprivation. \emph{Journal of Neuroscience Research}, \emph{93}(12), 1795--1803. \url{http://dx.doi.org/10.1002/jnr.23601}
+
+\leavevmode\hypertarget{ref-Samann2010}{}%
+34. Sämann, P. G., Tully, C., Spoormaker, V. I., Wetter, T. C., Holsboer, F., Wehrle, R., \& Czisch, M. (2010). Increased sleep pressure reduces resting state functional connectivity. \emph{Magnetic Resonance Materials in Physics, Biology and Medicine}, \emph{23}(5-6), 375--389. \url{http://dx.doi.org/10.1007/s10334-010-0213-z}
+
+\leavevmode\hypertarget{ref-Meier-Ewert2004}{}%
+35. Meier-Ewert, H. K., Ridker, P. M., Rifai, N., Regan, M. M., Price, N. J., Dinges, D. F., \& Mullington, J. M. (2004). Effect of sleep loss on C-Reactive protein, an inflammatory marker of cardiovascular risk. \emph{Journal of the American College of Cardiology}, \emph{43}(4), 678--683. \url{http://dx.doi.org/10.1016/j.jacc.2003.07.050}
+
+\leavevmode\hypertarget{ref-Schiller2018}{}%
+36. Schiller, H., Lekander, M., Rajaleid, K., Hellgren, C., Åkerstedt, T., Barck-Holst, P., \& Kecklund, G. (2018). Total workload and recovery in relation to worktime reduction: A randomised controlled intervention study with time-use data. \emph{Occupational and Environmental Medicine}, \emph{75}(3), 218--226. \url{http://dx.doi.org/10.1136/oemed-2017-104592}
 \end{cslreferences}
-
-\endgroup
-
-\newpage
-
-\hypertarget{design-plan}{%
-\section{Design Plan}\label{design-plan}}
-
-\hypertarget{study-type}{%
-\subsection{Study type}\label{study-type}}
-
-See OSF registration options.
-
-\hypertarget{blinding}{%
-\subsection{2. Blinding}\label{blinding}}
-
-Blinding describes who is aware of the experimenta manipulations within a study.
-
-\hypertarget{study-design}{%
-\subsection{3. Study design}\label{study-design}}
-
-\newpage
 
 \end{document}
