--- a/PR/subsections/workingBrain_PR_StudyInfo.Rmd
+++ b/PR/subsections/workingBrain_PR_StudyInfo.Rmd
@@ -30,10 +30,40 @@ Until recently the impact of working patterns on our neurophysiology has been ov
 
 A multitude of bodily systems react to and interact with sleep-loss, a key set being the body’s inflammatory response, and in particular increased expression of proinflammatory cytokines. Sleep restriction studies consistently found increased levels of interleukin-6 [IL-6; a known risk factor for depression @Howren2009] in response to restricted sleep [@Reinhardt2016], an effect that is resilient to recovery sleep [@Simpson2016]. One mechanism in which this altered inflammatory response affects cognitive and affective processing is via the interoceptive system [@Critchley2013]. Afferent signals from peripheral nerves that embed visceral organs communicate to the brain what is happening physiologically in the body, including sensing inflammation. Interoception interacts with many other cognitive processes, such that our bodily feelings determine the way we behave [@Critchley2017; @Rae2018]. Altogether, this suggests that inflammation, via interoception, can drive how we feel and ultimately how we act. 
 
-Neurally, the most consistent findings associated with inadequate sleep are: (i) amygdala hyper-reactivity to aversive stimuli [@Yoo2007a; @Motomura2014]; (ii) disconnect between frontal regions and the amygdala, as well as the basal ganglia [[@Yoo2007a; @Motomura2013; @Prather2013; @Zhao2018]; (iii) altered structure and function in the fronto-parietal network [@Cui2015; @Krause2017]. Furthermore, given its pivotal role in both interoception and the salience-detection network, the insular cortex is likely to be a key mediator of the neurophysiological changes that result from chronic sleep restriction [@Critchley2013; @Critchley2017; @Rae2018; @Ma2015]. However, very few studies directly investigate interactions between work patterns, inadequate sleep, and physiology, with none of them further assessing neurobiological changes in the same context. 
+Neurally, the most consistent findings associated with inadequate sleep are: (i) amygdala hyper-reactivity to aversive stimuli [@Yoo2007a; @Motomura2014]; (ii) disconnect between frontal regions and the amygdala, as well as the basal ganglia [@Yoo2007a; @Motomura2013; @Prather2013; @Zhao2018]; (iii) altered structure and function in the fronto-parietal network [@Cui2015; @Krause2017]. Furthermore, given its pivotal role in both interoception and the salience-detection network, the insular cortex is likely to be a key mediator of the neurophysiological changes that result from chronic sleep restriction [@Critchley2013; @Critchley2017; @Rae2018; @Ma2015]. However, very few studies directly investigate interactions between work patterns, inadequate sleep, and physiology, with none of them further assessing neurobiological changes in the same context. 
 
-This projects will address the resulting gaps in the literature using a combination of population neuroscience and epidemiological methods. We will begin by identifying neural markers of occupational wellbeing in the UK Biobank cohort: a population-based prospective study of ~500,000 individuals, a subset of which (~40,000) completed an imaging follow-up, including both task [i.e. emotional face perception; @Hariri2002a] and resting-state functional Magnetic Resonance Imaging (fMRI) [@Sudlow2015]. Following approval by the UK Biobank Access Committee (Project ref. no.: 62188), brain imaging data (i.e. task and resting functional brain MRI data) will be obtained for 35,501 participants, together with blood biochemistry assay results (i.e. C-reactive protein) and a curated selection of sociodemographic, lifestyle and health-related information collected through questionnaires, verbal interviews and census data (e.g. Townsend Deprivation Scores). The complete list of data fields requested can be found at http://tiny.cc/UKBBMetaData_62188 (please note, "Participants" attribute refers to total participants in the cohort with information in the selected "Field", not the number of participants in the dataset linked to the current project). Prior to acessing the imaging data and results of the biochemistry assays, we will explore trends in the non-imaging/-biochemical data. This will allow us to generate precise confirmatory hypotheses and specify predictions with regards to effects of occupational factors on imaging and physiological features, while taking into account complex contextual information. All analysis workflows, together with time-stamped logs detailing data access, handling, and transformation events will be linked to a future registration.
+This projects will address the resulting gaps in the literature using a combination of population neuroscience and epidemiological methods. We will begin by identifying neural markers of occupational wellbeing in the UK Biobank cohort: a population-based prospective study of ~500,000 individuals, a subset of which (~40,000) completed an imaging follow-up, including both task [i.e. emotional face perception; @Hariri2002a] and resting-state functional Magnetic Resonance Imaging (fMRI) [@Sudlow2015]. Following approval by the UK Biobank Access Committee (Project ref. no.: 62188), brain imaging data (i.e. task and resting functional brain MRI data) will be obtained for 35,501 participants, together with blood biochemistry assay results (i.e. C-reactive protein) and a curated selection of sociodemographic, lifestyle and health-related information collected through questionnaires, verbal interviews and census data (e.g. Townsend Deprivation Scores). The complete list of data fields requested can be found at http://tiny.cc/UKBBMetaData_62188 (please note, "Participants" attribute refers to total participants in the cohort with information in the selected "Field", not the number of participants in the dataset linked to the current project). Prior to acessing the imaging data and results of the biochemistry assays, we will explore trends in the non-imaging/-physiological data. This will allow us to generate precise confirmatory hypotheses and specify predictions with regards to effects of occupational factors on imaging and physiological features, while taking into account complex contextual information. All analysis workflows, together with time-stamped logs detailing data access events will be linked to a future registration.
+
+\newpage
+
 
 ## Hypotheses and predictions
 
-At this stage, we aim to take an exploratory approach to our investigation and therefore submit no hypotheses or predictions. Details of the exploratory analyses planned can be found under the *Analysis Plan* section.
+***H: Working patterns will be associated with specific neural markers.*** Based on findings in the sleep literature [@Yoo2007a; @Motomura2013; @Motomura2014; @Prather2013; @Zhao2018; @Cui2015; @Krause2017; @Yeo2015; @DeHavas2012; @Shao2014; @Lei2015; @Samann2010], I predict that: 
+
+- Working longer hours will be associated with amygdala hyper-reactivity in response to emotional faces in the task fMRI*.
+
+- Working longer hours will be associated with reduced functional connectivity between the prefrontal cortex and the amygdala in task and resting-state fMRI, an effect mediated by the insular cortex*.
+
+- Working longer hours will be associated with reduced functional connectivity within the salience-detection network, executive control, fronto-parietal, and default mode (DMN) networks in resting-state fMRI*.
+    
+- Working longer hours will be associated with attenuated anticorrelation between task-negative (i.e. DMN) and task-positive regions (i.e. executive control, fronto-parietal, and salience-detection networks) in resting-state fMRI*.
+
+\hspace{1cm}
+
+***H: Occupational factors will affect physiological immune function, in part, through altering sleep patterns.*** Given the known neurophysiological consequences of sleep restriction [@Reinhardt2016; @Simpson2016; @Meier-Ewert2004], and the effect of working patterns on sleep duration and quality [@Basner2014; @Basner2018; @Marucci-Wellman2016, @VanderHulst2003], I predict that: 
+
+- Working longer hours will be associated with higher concentrations of CRP in the UK Biobank data*.
+
+\hspace{1cm}
+
+
+***H: Work patterns will impact cognitive function and workplace performance.*** Based on work time reduction interventions [@Schiller2018; Schiller2017a; @Akerstedt2001], I predict that: 
+
+- Working longer hours and other time-consuming occupational factors will negatively correlate with cognitive measures in the UK Biobank*.
+
+\* - after controlling for confounds.
+
+We believe that the provision of more specific/better specified predictions is not possible/prudent at this stage. Following detailed exploratory analyses of the Main dataset (i.e. non-imaging datafields) will allow us to understand and model bias in our data and generate precise confirmatory hypotheses and well-specified predictions about which occupational factors have a meaningful(?) effect on imaging and physiological features, and how the effect manifests.
+
+\newpage
