--- a/PR/workingBrain_PR_Main.Rmd
+++ b/PR/workingBrain_PR_Main.Rmd
@@ -20,8 +20,6 @@ affiliation:
     institution   : "Sackler Centre for Consciousness Science, University of Sussex, Falmer, UK"
 
 authornote: |
-
-
 abstract: |
   One or two sentences providing a **basic introduction** to the field,  comprehensible to a scientist in any discipline.
   
@@ -41,7 +39,6 @@ abstract: |
   
 keywords          : "UK Biobank; Occupational factors; brain; fMRI"
 wordcount         : "X"
-
 bibliography      : workingBrain.bib
 
 floatsintext      : no
@@ -50,13 +47,14 @@ tablelist         : no
 footnotelist      : no
 linenumbers       : no
 mask              : no
-draft             : no
+draft             : yes
 csl               : apaNumeric
 
 documentclass     : "apa6"
 classoption       : "man"
 output            : papaja::apa6_pdf
 ---
+
 
 ```{r setup, include = FALSE}
 library("papaja")
@@ -68,25 +66,11 @@ set.seed(42)
 knitr::opts_chunk$set(cache.extra = knitr::rand_seed)
 ```
 
-
-```{r child = "subsections/workingBrain_PR_StudyInfo.Rmd"}
-
-```
-
-\begingroup
-\setlength{\parindent}{-0.5in}
-\setlength{\leftskip}{0.5in}
-
-<div id="refs" custom-style="Bibliography"></div>
-\endgroup
-
 \newpage
 
-```{r child = "subsections/workingBrain_PR_DesignPlan.Rmd"}
+```{r child = "subsections/workingBrain_PR_StudyInfo_CR.Rmd"}
 
 ```
-
-
 
 \newpage
 
